--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10",
+    "react-virtualized": "^9.8.0",
     "styled-components": "^2.1.1"
   },
   "scripts": {
