--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "polished": "^1.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5",
     "react-scripts": "1.0.10",
     "react-virtualized": "^9.8.0",
     "styled-components": "^2.1.1"
